--- a/index-alt.html
+++ b/index-alt.html
@@ -64,7 +64,7 @@
 	    		<!-- Content -->
 	            <div class="vertical-center">
 	        		<div class="nav-text">
-		        		<div class="my-avatar"><img src="images/photos/my-avatar.jpg" class="img-circle" alt="" /></div>
+		        		<div class="my-avatar"><img src="images/photos/main-photo-test.jpg" class="img-circle" alt="" /></div>
 		        		<h2 class="margin-bottom-0">Mary Jane <strong>Doe</strong></h2>
 		        		<h6 class="nav-caption">I’m 28 years old proffesional <span class="text-primary">mental coach</span> from Poland.</h6>
 		        	</div>
