--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 
 <!-- Title -->
-<title>Jestem - Elegant & Minimal Personal Resume vCard Theme</title>
+<title>JohnHa</title>
 
 <!-- Favicons -->
 <link rel="shortcut icon" href="images/favicon.png">
@@ -56,8 +56,8 @@
 	    	<div class="home-content home-photo main-photo dark">
 	    		<div class="overlay overlay-black" data-alpha="60"></div>
 	    		<div class="text-center vertical-center">
-	    			<span class="home-title">Mary Jane <strong>Doe</strong></span>
-	    			<span class="home-caption">The <strong>Mentalist</strong></span>
+	    			<span class="home-title">John <strong>Ha</strong></span>
+	    			<span class="home-caption"><strong>Digital Marketing Leader</strong></span>
 	    		</div>
 	    	</div>
 
@@ -71,8 +71,8 @@
 	    		<!-- Content -->
 	            <div class="text-right vertical-center">
 	        		<div class="nav-text">
-		        		<div class="my-avatar"><img src="images/photos/my-avatar.jpg" class="img-circle" alt="" /></div>
-		        		<h2 class="margin-bottom-0">Mary Jane <strong>Doe</strong></h2>
+		        		<div class="my-avatar"><img src="images/avatars/avatar.jpg" class="img-circle" alt="" /></div>
+		        		<h2 class="margin-bottom-0">John <strong>Ha</strong></h2>
 		        		<h6 class="nav-caption">I’m 28 years old proffesional <span class="text-primary">mental coach</span> from Poland.</h6>
 		        	</div>
 	        		<div class="content-buttons">
@@ -108,8 +108,8 @@
 				    			<div class="resume-box">
 				    				<h4 class="title-bar title-bar-black title-bar-hover"><strong>About</strong> Me</h4>
 				    				<div class="box-content">
-				    					<p class="lead">I’m <strong>Mary Jane Doe</strong> - 28 years old professional mentalist in Poland.</p>
-										<p>Through <strong>7 years of my expierience</strong> I have been working for over <strong>200+ happy clients</strong> from all over the world. I’m always looking for new, interesting colaborations and I’m sure that I’m the man you need to hire!</p>
+				    					<p class="lead">I’m <strong>John Ha</strong> - 25 years old Marketing Leader in Beehexa.</p>
+										<p>Through <strong>4 years of my expierience</strong> I have been working for over <strong>200+ happy clients</strong> from all over the world. I’m always looking for new, interesting colaborations and I’m sure that I’m the man you need to hire!</p>
 	            						<a href="#" class="btn btn-primary" data-target="slide" data-slide="4">Contact Me</a>
 				    				</div>
 				    			</div>
@@ -490,17 +490,17 @@
 		    					<ul class="list-icons ">
 		    						<li>
 		    							<i class="fa fa-map-marker fa-fw text-primary"></i>
-		    							<span class="content">1111-A Nowhere Lane,<br>
-										Outta Sight,<br>
-										State 90378, USA</span>
+		    							<span class="content">26/107 Phung Hung Street,<br>
+										Dong Ba District,<br>
+										Hue City</span>
 									</li>
 									<li>
 		    							<i class="fa fa-envelope-o fa-fw text-primary"></i>
-		    							<span class="content"><a href="#">johnathandoe@suelo.pl</a></span>
+		    							<span class="content"><a href="#">haquang@beehexa.com</a></span>
 									</li>
 									<li>
 		    							<i class="fa fa-phone fa-fw text-primary"></i>
-		    							<span class="content">+0(31)6 89764536</span>
+		    							<span class="content">+0935569696</span>
 									</li>
 		    					</ul>
 		    				</div>
@@ -532,9 +532,9 @@
 		    			<div class="contact-box">
 		    				<h4 class="title-bar title-bar-black"><strong>Social</strong> media</h4>
 		    				<div class="social-icons margin-bottom-10">
-		    					<a href="#" class="social-icon icon-facebook"><i class="fa fa-facebook fa-fw"></i></a>
+		    					<a href="https://www.facebook.com/nhatquang.ha.1" class="social-icon icon-facebook"><i class="fa fa-facebook fa-fw"></i></a>
 		    					<a href="#" class="social-icon icon-twitter"><i class="fa fa-twitter fa-fw"></i></a>
-		    					<a href="#" class="social-icon icon-google-plus"><i class="fa fa-google-plus fa-fw"></i></a>
+		    					<a href="https://www.linkedin.com/in/johnhanhat/" class="social-icon icon-google-plus"><i class="fa fa-google-plus fa-fw"></i></a>
 		    				</div>
 		    				<div class="fb-like" data-href="https://www.facebook.com/suelopl" data-layout="button_count" data-action="like" data-show-faces="false" data-share="false"></div>
 		    			</div>
